tests/neg/erased-type.scala
//> using options -experimental -language:experimental.erasedDefinitions

class Test {
  erased type T // error
}
